infra/frontend-image.yaml
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: next-image-deploy
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: next-image
#   template:
#     metadata:
#       labels:
#         app: next-image
#     spec:
#       containers:
#         - name: next-image
#           image: h1b/nodejs-app
#           imagePullPolicy: Never
#           env:
#             - name: BACKEND_URL
#               value: "http://go-app:80"
#           resources:
#             limits:
#               memory: "1Gi"
#               cpu: "1000m"
#           ports:
#             - containerPort: 3000
#               name: next-image-http
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: next-image
# spec:
#   type: NodePort
#   selector:
#     app: next-image
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: next-image-http


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-image-cache-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-image-cache
  template:
    metadata:
      labels:
        app: next-image-cache
    spec:
      containers:
        - name: next-image-cache
          image: varnish:alpine
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 80

        - name: next-image-app
          image: h1b/nodejs-app
          imagePullPolicy: Never
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /_next
              port: 3000
          livenessProbe:
            httpGet:
              path: /_next
              port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: next-image-cache
spec:
  type: NodePort
  selector:
    app: next-image-cache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
