infra/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: next-app
          image: h1b/nodejs-app
          imagePullPolicy: Never
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 3000
              name: next-app-http
---
apiVersion: v1
kind: Service
metadata:
  name: next-app
spec:
  type: LoadBalancer
  selector:
    app: next-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: next-app-http
