infra/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /_next
        pathType: Prefix
        backend:
          service:
            name: next-image-cache
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-app
            port:
              number: 80
