infra/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mariadb:11.4
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-volume

        - name: pma
          image: phpmyadmin/phpmyadmin
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
              name: pma-port
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: pvc0001

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: db-port

---
apiVersion: v1
kind: Service
metadata:
  name: pma
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 80
      targetPort: pma-port

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: go-app
      ports:
        - protocol: TCP
          port: 3306
